--- a/feed-agg.service
+++ b/feed-agg.service
@@ -35,7 +35,7 @@ UMask=0022
 ProtectSystem=strict
 ProtectHome=true
 RuntimeDirectory=feed-agg
-# StateDirectory=feed-agg
+StateDirectory=feed-agg
 # CacheDirectory=
 # LogDirectory=
 ConfigurationDirectory=feed-agg
