--- a/kustomize/base/deployment.k8s.yaml
+++ b/kustomize/base/deployment.k8s.yaml
@@ -8,11 +8,11 @@ spec:
   template:
     spec:
       containers:
-        - name: feed-agg
-          image: docker.seankhliao.com/feed-agg:latest
-          args:
+        - args:
             - -addr=0.0.0.0:8080
             - -data=/data
+          name: feed-agg
+          image: docker.seankhliao.com/feed-agg:latest
           ports:
             - name: http
               containerPort: 8080
@@ -24,5 +24,4 @@ spec:
       terminationGracePeriodSeconds: 10
       volumes:
         - name: data
-          persistentVolumeClaim:
-            claimName: feed-agg-data
+          emptyDir: {}
