--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -4,6 +4,7 @@ commonLabels:
   app.kubernetes.io/name: feed-agg
 resources:
   - deployment.k8s.yaml
-  - ingress.k8s.yaml
+  # - ingress.k8s.yaml
+  - ingressroute.k8s.yaml
   - service.k8s.yaml
   - serviceaccount.k8s.yaml
